# CrossCraft-Classic-Server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig
.github/workflows/: crosscraft.yml
src/: Banlist.cpp  Banlist.hpp  BlockConst.hpp  Client.cpp  Client.hpp  ClientPool.cpp  ClientPool.hpp  Config.hpp  IncomingPackets.cpp  IncomingPackets.hpp  Main.cpp  OPList.cpp  OPList.hpp  OutgoingPackets.cpp  OutgoingPackets.hpp  ProtocolTypes.hpp  Server.cpp  Server.hpp  Utility.hpp  broadcaster.zig  client.zig  generator.zig  logger.zig  main.zig  network.zig  perlin.zig  protocol.zig  server.zig  sock.c  sock.h  users.zig  world.zig
src/World/: World.cpp  World.hpp
src/World/Generation/: ClassicGenerator.cpp  ClassicGenerator.hpp  CrossCraftGenerator.cpp  CrossCraftGenerator.hpp  NoiseUtil.cpp  NoiseUtil.hpp  WorldGenUtil.cpp  WorldGenUtil.hpp
